# 6713_qa

./: .gitignore  README.md  comp6713-project-scope-guideline.docx  pyproject.toml
configs/: experiment_runbook.md
docs/: cuad_finetuning_report.md  experiment_log.md  final_report.md  part_c_finetuning_report.md  squad_finetuning_report.md  squad_v2_finetuning_report.md
scripts/: evaluate_qa.py  predict.py  prepare_cuad.py  prepare_data.py  prepare_squad.py  prepare_squad_v2.py  profile_lengths.py  train_qa.py
src/contract_qa/: __init__.py  data_utils.py  metrics.py  qa_utils.py
src/contract_qa_longformer/: __init__.py  qa_utils.py
