[project]
name = "contract_qa"
version = "0.1.0"
description = "Contract QA fine-tuning project for COMP6713"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ijson>=3.5.0",
    "numpy>=2.4.2",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.5.3",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
